second commit Romina

--- a/src/stylesheets/aboutMe.css
+++ b/src/stylesheets/aboutMe.css
@@ -2,7 +2,7 @@ body {
     font-family: Georgia, 'Times New Roman', Times, serif;
     margin: 0;
     padding: 0;
-    background-color: #000000;
+    background-color: #04001a;
 }
 
 .container {
