--- a/src/stylesheets/navbar.css
+++ b/src/stylesheets/navbar.css
@@ -2,17 +2,17 @@
     text-align: center;
     border: 1px solid hsl(320, 3%, 39%);
     border-radius: 10px;
-    background-color: #281e2a;
+    background-color: #fefcffc2;
     box-shadow: 4px 4px 4px;
     padding-top: 2%;
     margin-top: 10%;
-    margin-left: 40%;
-    max-width: 400px;
+    margin-left: 35%;
+    max-width: 450px;
 
 }
 
 .navbar-brand h1{
-    color: aliceblue;
+    color: rgb(0, 0, 0);
     
 }
 
@@ -27,16 +27,14 @@
 .nombre_classname_ul{
     display:flex;
     gap: 40px;
-    color: aliceblue;
+    color: rgb(0, 0, 0);
     font-size: 20px;
     
 }
 
 .nombre_classname{
-    color: aliceblue;
+    color: rgb(0, 0, 0);
     font-size: 15px;
     font-weight:bold;
 
-
- 
 }
