--- a/src/stylesheets/aboutMe.css
+++ b/src/stylesheets/aboutMe.css
@@ -8,13 +8,15 @@ body {
 .container {
     max-width: 500px;
     margin-left: 0px;
-    padding: 0px;
+    padding: 4px;
+    padding-top: 10px;
     background-color: rgba(238, 237, 237, 0.849);
 }
 
 .header {
     display: flex;
     padding: 10px;
+    color: #000000;
 }
 
 .header img {
@@ -24,19 +26,45 @@ body {
     position: relative;
     right: 1.5rem;
     top: 1.5rem;
+    color: #000000;
 }
 
 .photo-personal{
     width: 250px;
     height: 250px;
     border-radius: 50%;
-    margin: 0 auto;
+    margin-left: 4rem;
+}
+
+.personal-info h2{
+    color: #000000;
+    margin-left: 1rem;
+}
+
+.personal-info h1{
+    color: #000000;
+    margin-left: 1rem;
+}
+
+.personal-info p{
+    font-family:'Times New Roman', Times, serif;
+    font-weight: bolder;
+    font-size: larger;
+    color: #08206d;
+    margin-right: 2rem;
+    margin-left: 1rem;
 }
 
 #sectionmain{
     text-align: center;
     position: relative;
+    color: #000000;
 }
+
+li{
+    color: #000000;
+}
+
 
 #particles-js {
     margin: 0%;
@@ -49,55 +77,88 @@ body {
 
 .profile h1 {
     margin-left: 1rem;
+    color: #000000;
 }
 
 .profile h2 {
     margin-left: 1rem;
+    color: #000000;
 }
 
 .información-de-contacto {
     margin-left: 1rem;
+    color: #000000;
 }
 
 .profile-description {
+    margin-right: 2rem;
     margin-left: 1rem;
+    justify-content: left;
+    color: #000000;
 }
 
 .profile-description h2 {
     text-decoration: underline;
+    color: #000000;
+}
+
+.profile-description p {
+   font-family:'Times New Roman', Times, serif;
+   font-weight: bolder;
+   font-size: larger;
+   color: #08206d;
 }
 
 .experience {
     margin-left: 1rem;
+    color: #000000;
 }
 
 .experience h2 {
     text-decoration: underline;
+    color: #000000;
 }
 
 .skills {
     margin-left: 1rem;
+    color: #000000;
 }
 
 .skills h2 {
     text-decoration: underline;
+    color: #000000;
 }
 
-.Courses {
-    margin-left: 1rem;
-}
 
 .Courses h2 {
-    text-decoration: underline;
-}
-
-.education {
     margin-left: 1rem;
+    text-decoration: underline;
+    color: #000000;
+}
+
+.Courses li{
+    font-family:'Times New Roman', Times, serif;
+    font-weight: bolder;
+    font-size: larger;
+    color: #08206d;
+    margin-right: 2rem;
+    margin-left: 1rem;
+}
+
+.education h2{
+    margin-left: 1rem;
+    text-decoration: underline;
+    color: #000000;
 
 }
 
-.education h2 {
-    text-decoration: underline;
+.education p {
+    font-family:'Times New Roman', Times, serif;
+    font-weight: bolder;
+    font-size: larger;
+    color: #08206d;
+    margin-right: 2rem;
+    margin-left: 1rem;
 }
 
 .more_info {
