--- a/src/stylesheets/navbar.css
+++ b/src/stylesheets/navbar.css
@@ -1,5 +1,6 @@
 .navbar {
     text-align: center;
+    align-content: center;
     border: 1px solid hsl(320, 3%, 39%);
     border-radius: 10px;
     background-color: #fefcffc2;
@@ -7,7 +8,7 @@
     padding-top: 2%;
     margin-top: 10%;
     margin-left: 35%;
-    max-width: 450px;
+    max-width: 550px;
 
 }
 
