--- a/src/stylesheets/aboutMe.css
+++ b/src/stylesheets/aboutMe.css
@@ -109,6 +109,16 @@ li{
    color: #08206d;
 }
 
+.experience {
+    margin-left: 1rem;
+    color: #000000;
+}
+
+.experience h2 {
+    text-decoration: underline;
+    color: #000000;
+}
+
 .skills {
     margin-left: 1rem;
     color: #000000;
@@ -118,7 +128,6 @@ li{
     text-decoration: underline;
     color: #000000;
 }
-
 
 .Courses h2 {
     margin-left: 1rem;
@@ -149,4 +158,14 @@ li{
     color: #08206d;
     margin-right: 2rem;
     margin-left: 1rem;
+}
+
+.more_info {
+    list-style: none;
+    padding: 0;
+    margin-left: 1rem;
+}
+
+.more_info h2 {
+    text-decoration: underline;
 }
